--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <header>
-        
+        <img src="./media/img/dgp-2022.svg" alt="logo">
       </header>
   </body>
 </html>
