--- a/tickets-dgp.html
+++ b/tickets-dgp.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tickets 2022 | DutchGP</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" href="./css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tickets 2022 | DutchGP</title>
+</head>
+
+<body>
+  <div>
     <img src="./media/img/f1-banner.jpg" alt="banner" class="banner">
     <h1>Tickets 2022</h1>
+    <br />
     <h2>Formula 1 Heineken Dutch Grand Prix</h2>
-    <h3>Ticketverkoop 2022</h3>
-    <p>
-      Ticketverkoop 2022 Op 2, 3 en 4 september 2022 reist de Formule 1 opnieuw
+  </div>
+  <br />
+  <h2>Ticketverkoop 2022</h3>
+
+
+    <p class="ticket_info">
+      Op 2, 3 en 4 september 2022 reist de Formule 1 opnieuw
       af naar CM.com Circuit Zandvoort. Vanaf 1 november tot 22 november kon je,
       mits geregistreerd, tickets aanvragen voor de Formula 1 Heineken Dutch
       Grand Prix 2022. Helaas zijn er geen tickets meer beschikbaar voor
@@ -22,5 +30,6 @@
       Op dit platform kunnen tickethouders hun gekochte tickets direct aanbieden
       aan andere racefans in binnen- en buitenland.
     </p>
-  </body>
+</body>
+
 </html>
