--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/nav.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage | DutchGP</title>
   </head>
+
   <body>
-      <header>
-        <img src="./media/img/dgp-2022.svg" alt="logo">
-      </header>
+    <header>
+      <menu>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+
+            <li>
+              <a href="#">Over F1</a>
+              <ul>
+                <li><a href="#" class="ri">DGP</a></li>
+                <li>
+                  <a href="#">Tickets</a>
+                  <ul>
+                    <li><a href="#">HTML Projecten</a></li>
+                    <li><a href="#">CSS projecten</a></li>
+                    <li><a href="#">JS projecten</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Teams</a></li>
+          </ul>
+        </nav>
+      </menu>
+      <img src="./media/img/dgp-2022.svg" alt="logo" />
+    </header>
   </body>
 </html>
