--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/nav.css" />
+    <link rel="stylesheet" href="./css/logos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage | DutchGP</title>
   </head>
@@ -37,5 +38,17 @@
       </menu>
       <img src="./media/img/dgp-2022.svg" alt="logo" />
     </header>
+    <!-- footer -->
+      <div class="logos">
+          <img src="./images/Jumbo_Logo.svg.png" alt="" id="jumbologo">
+          <img src="./images/Heineken-Logo.png" alt="" id="heinekenlogo">
+          <img src="./images/538_logo.png" alt="" id="logo538">
+          <img src="./images/VWBM.png" alt="" id="vwbmlogo">
+
+              <div id="tekst">
+                  <p>2022 © Dutch GP B.V. An initiative by SportVibes, TIG Sports & Circuit Zandvoort</p>
+              </div>
+      </div>
+  </footer>
   </body>
 </html>
