ticekts n beetje geupdate

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                 <li>
                   <a href="#">Tickets</a>
                   <ul>
-                    <li><a href="#">HTML Projecten</a></li>
-                    <li><a href="#">CSS projecten</a></li>
-                    <li><a href="#">JS projecten</a></li>
+                    <li><a href="./my-dgp.html">My DGP-account</a></li>
+                    <li><a href="./tickets-dgp.html">Tickets 2022</a></li>
+                    <li><a href="./resell-platform.html">Resell Platform</a></li>
+                    <li><a href="./hospitality.html">Hospitality</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Contact</a></li>
