--- a/tickets-dgp.html
+++ b/tickets-dgp.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tickets 2022 | DutchGP</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="./css/style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tickets 2022 | DutchGP</title>
-</head>
-
-<body>
-  <div>
-    <img src="./media/img/f1-banner.jpg" alt="banner" class="banner">
-    <h1>Tickets 2022</h1>
+  <body>
+    <div>
+      <img src="./media/img/f1-banner.jpg" alt="banner" class="banner" />
+      <h1>Tickets 2022</h1>
+      <br />
+      <h2>Formula 1 Heineken Dutch Grand Prix</h2>
+    </div>
     <br />
-    <h2>Formula 1 Heineken Dutch Grand Prix</h2>
-  </div>
-  <br />
-  <h2>Ticketverkoop 2022</h3>
+    <div class="text">
+      <h3>Ticketverkoop 2022</h3>
 
-
-    <p class="ticket_info">
-      Op 2, 3 en 4 september 2022 reist de Formule 1 opnieuw
-      af naar CM.com Circuit Zandvoort. Vanaf 1 november tot 22 november kon je,
-      mits geregistreerd, tickets aanvragen voor de Formula 1 Heineken Dutch
-      Grand Prix 2022. Helaas zijn er geen tickets meer beschikbaar voor
-      Qualifying Saturday en Sunday Raceday op 3 & 4 september. Wil je toch nog
-      kans maken op tickets? Race dan snel naar ons officiële Resell Platform!
-      Op dit platform kunnen tickethouders hun gekochte tickets direct aanbieden
-      aan andere racefans in binnen- en buitenland.
-    </p>
-</body>
-
+      <p class="ticket_info">
+        Op 2, 3 en 4 september 2022 reist de Formule 1 opnieuw af naar CM.com
+        Circuit Zandvoort. Vanaf 1 november tot 22 november kon je, mits
+        geregistreerd, tickets aanvragen voor de Formula 1 Heineken Dutch Grand
+        Prix 2022. Helaas zijn er geen tickets meer beschikbaar voor Qualifying
+        Saturday en Sunday Raceday op 3 & 4 september. Wil je toch nog kans
+        maken op tickets? Race dan snel naar ons officiële Resell Platform! Op
+        dit platform kunnen tickethouders hun gekochte tickets direct aanbieden
+        aan andere racefans in binnen- en buitenland.
+      </p>
+      <br />
+      <button class="resell_button">
+        <a href="https://dutchgp.com/resell-platform/">Bekijk het resell platform</a>
+      </button>
+    </div>
+  </body>
 </html>
