heb ff de css files geformat ziet r dan nicr  uit idk

--- a/my-dgp.html
+++ b/my-dgp.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My DGP account | DutchGP</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <!-- zet nav hier -->
+    </header>
+  </body>
 </html>
