--- a/tickets-dgp.html
+++ b/tickets-dgp.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <header>
+      <!-- zet nav hier -->
+    </header>
+
     <div>
       <img src="./media/img/f1-banner.jpg" alt="banner" class="banner" />
       <h1>Tickets 2022</h1>
@@ -31,7 +35,9 @@
       </p>
       <br />
       <button class="resell_button">
-        <a href="https://dutchgp.com/resell-platform/">Bekijk het resell platform</a>
+        <a href="https://dutchgp.com/resell-platform/"
+          >Bekijk het resell platform</a
+        >
       </button>
     </div>
   </body>
