geb wat shit gedaan

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://dutchgp.com/c/ui/dgp/favicons/favicon-32x32.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/nav.css" />
-    <link rel="stylesheet" href="./css/logos.css">
+    <link rel="stylesheet" href="./css/logos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage | DutchGP</title>
   </head>
@@ -15,7 +16,7 @@
       <menu>
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
 
             <li>
               <a href="#">Over F1</a>
@@ -26,7 +27,9 @@
                   <ul>
                     <li><a href="./my-dgp.html">My DGP-account</a></li>
                     <li><a href="./tickets-dgp.html">Tickets 2022</a></li>
-                    <li><a href="./resell-platform.html">Resell Platform</a></li>
+                    <li>
+                      <a href="./resell-platform.html">Resell Platform</a>
+                    </li>
                     <li><a href="./hospitality.html">Hospitality</a></li>
                   </ul>
                 </li>
@@ -40,16 +43,35 @@
       <img src="./media/img/dgp-2022.svg" alt="logo" />
     </header>
     <!-- footer -->
+    <footer>
       <div class="logos">
-          <img src="./images/Jumbo_Logo.svg.png" alt="" id="jumbologo">
-          <img src="./images/Heineken-Logo.png" alt="" id="heinekenlogo">
-          <img src="./images/538_logo.png" alt="" id="logo538">
-          <img src="./images/VWBM.png" alt="" id="vwbmlogo">
+        <img
+          src="./images/Jumbo_Logo.svg.png"
+          alt=""
+          id="jumbologo"
+          class="footer_img"
+        />
+        <img
+          src="./images/Heineken-Logo.png"
+          alt=""
+          id="heinekenlogo"
+          class="footer_img"
+        />
+        <img
+          src="./images/538_logo.png"
+          alt=""
+          id="logo538"
+          class="footer_img"
+        />
+        <img src="./images/VWBM.png" alt="" id="vwbmlogo" class="footer_img" />
 
-              <div id="tekst">
-                  <p>2022 © Dutch GP B.V. An initiative by SportVibes, TIG Sports & Circuit Zandvoort</p>
-              </div>
+        <div id="tekst">
+          <p>
+            2022 © Dutch GP B.V. An initiative by SportVibes, TIG Sports &
+            Circuit Zandvoort
+          </p>
+        </div>
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
