--- a/my-dgp.html
+++ b/my-dgp.html
@@ -1,14 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://dutchgp.com/c/ui/dgp/favicons/favicon-32x32.png"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/nav.css" />
+    <link rel="stylesheet" href="./css/logos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My DGP account | DutchGP</title>
   </head>
   <body>
     <header>
-      <!-- zet nav hier -->
+      <menu>
+        <nav>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+
+            <li>
+              <a href="#">Over F1</a>
+              <ul>
+                <li><a href="#" class="ri">DGP</a></li>
+                <li>
+                  <a href="#">Tickets</a>
+                  <ul>
+                    <li><a href="./my-dgp.html">My DGP-account</a></li>
+                    <li><a href="./tickets-dgp.html">Tickets 2022</a></li>
+                    <li>
+                      <a href="./resell-platform.html">Resell Platform</a>
+                    </li>
+                    <li><a href="./hospitality.html">Hospitality</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Teams</a></li>
+          </ul>
+        </nav>
+      </menu>
     </header>
+    <main></main>
+    <!-- footer -->
+    <footer>
+      <div class="logos">
+        <img
+          src="./images/Jumbo_Logo.svg.png"
+          alt=""
+          id="jumbologo"
+          class="footer_img"
+        />
+        <img
+          src="./images/Heineken-Logo.png"
+          alt=""
+          id="heinekenlogo"
+          class="footer_img"
+        />
+        <img
+          src="./images/538_logo.png"
+          alt=""
+          id="logo538"
+          class="footer_img"
+        />
+        <img src="./images/VWBM.png" alt="" id="vwbmlogo" class="footer_img" />
+
+        <div id="tekst">
+          <p>
+            2022 © Dutch GP B.V. An initiative by SportVibes, TIG Sports &
+            Circuit Zandvoort
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
