met mijn stuk klaar... denk ik

--- a/hospitality.html
+++ b/hospitality.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="background">
   <head>
     <link
       rel="icon"
@@ -45,7 +45,18 @@
         </nav>
       </menu>
     </header>
-    <main></main>
+    <main>
+      <h1 class="text">Hospitality</h1>
+      <p class="text info mid_txt">
+        Hospitality mogelijkheden De F1 Heineken Dutch Grand Prix is voor
+        bedrijven de perfecte plek om gasten te ontvangen en samen een
+        bijzondere dag te beleven. Vanuit een unieke locatie en met de
+        exclusieve gastvrijheid, maak je alle actie en raceactiviteiten van heel
+        dichtbij mee. Een betere manier om van dit racespektakel te genieten is
+        er niet! Heb je interesse in de hospitality mogelijkheden? Stuur dan een
+        mail naar <b> hospitality@dutchgp.com</b>.
+      </p>
+    </main>
     <!-- footer -->
     <footer>
       <div class="logos">
