--- a/my-dgp.html
+++ b/my-dgp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="background">
   <head>
     <link
       rel="icon"
@@ -45,7 +45,20 @@
         </nav>
       </menu>
     </header>
-    <main></main>
+    <main>
+      <h1 class="text">My-DGP-account</h1>
+      <p class="text info">
+        In de mijn MyDGP-omgeving kunnen tickets worden ingezien en gedownload
+        door diegene die de tickets heeft aangeschaft. Je kan deze zowel geprint
+        dan wel digitaal meenemen of in de Dutch GP app zetten (indien tickets
+        zijn gepersonaliseerd).
+      </p>
+      <button class="resell_button">
+        <a href="https://shop.ticketing.cm.com/dutch-grand-prix/"
+          >log in op jouw My-DGP-Account</a
+        >
+      </button>
+    </main>
     <!-- footer -->
     <footer>
       <div class="logos">
