--- a/resell-platform.html
+++ b/resell-platform.html
@@ -45,7 +45,7 @@
         </nav>
       </menu>
     </header>
-    <main>
+    <main class="background">
       <h1 class="text">Resell platform</h1>
       <br />
       <p class="text">
@@ -56,6 +56,12 @@
         DutchGP.com, waar geïnteresseerde racefans deze tickets kunnen kopen
         tegen de originele ticketprijs.
       </p>
+      <br />
+      <button class="resell_button">
+        <a href="https://shop.ticketing.cm.com/dgpresell/"
+          >bekijk het resell platform</a
+        >
+      </button>
     </main>
     <!-- footer -->
     <footer>
