--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="./hospitality.html">Hospitality</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </li>
             <li><a href="#">Teams</a></li>
