--- a/hospitality.html
+++ b/hospitality.html
@@ -46,7 +46,7 @@
       </menu>
     </header>
     <main>
-      <h1 class="text">Hospitality</h1>
+      <h1 class="text" id="ttl">Hospitality</h1>
       <p class="text info mid_txt">
         Hospitality mogelijkheden De F1 Heineken Dutch Grand Prix is voor
         bedrijven de perfecte plek om gasten te ontvangen en samen een
