meer aanpassing aan de resellplatform

--- a/resell-platform.html
+++ b/resell-platform.html
@@ -46,15 +46,16 @@
       </menu>
     </header>
     <main class="background">
-      <h1 class="text">Resell platform</h1>
+      <h1 class="ttl">Resell platform</h1>
       <br />
       <p class="text">
         Speciaal voor iedereen die tickets heeft aangeschaft, is er het
         officiële Dutch Grand Prix resell platform. Op dit platform kunnen
         tickets direct aangeboden worden aan andere racefans in binnen- en
-        buitenland. De tickets komen vervolgens beschikbaar in de webshop op
-        DutchGP.com, waar geïnteresseerde racefans deze tickets kunnen kopen
-        tegen de originele ticketprijs.
+        buitenland. <br />
+        De tickets komen vervolgens beschikbaar in de webshop op DutchGP.com,
+        waar geïnteresseerde racefans deze tickets kunnen kopen tegen de
+        originele ticketprijs.
       </p>
       <br />
       <button class="resell_button">
