--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
       </menu>
       <img src="./media/img/dgp-2022.svg" alt="logo" />
     </header>
+    <div>
+      <button class="resell_button">
+      <a href="./recycle.html">RESYCLE</a>
+      </button>
+      <button class="resell_button">
+      <a href="./over-dgp.html">OVER DGP</a>
+      </button>
+      <button class="resell_button">
+      <a href="./back-on-track.html">BACK-ON-TRACK</a>
+      </button>
+      <button class="resell_button">
+      <a href="./circuit.html">CIRCUIT</a>
+      </button>
+      <button class="resell_button">
+      <a href="./overnachten.html">OVERNACHTEN</a>
+      </button>
+    </div>
     <!-- footer -->
     <footer>
       <div class="logos">
