--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://dutchgp.com/c/ui/dgp/favicons/favicon-32x32.png">
   </head>
   <body>
     <!-- nav-bar -->
