--- a/my-dgp.html
+++ b/my-dgp.html
@@ -37,7 +37,7 @@
                     <li><a href="./hospitality.html">Hospitality</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </li>
             <li><a href="./back-on-track.html">Back-On-Track</a></li>
